--- a/libpnt/Makefile
+++ b/libpnt/Makefile
@@ -1,3 +1,15 @@
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: domelche <marvin@42.fr>                    +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2018/09/19 10:53:22 by domelche          #+#    #+#              #
+#    Updated: 2018/09/19 10:53:54 by domelche         ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
+
 NAME = libpnt.a
 
 SRCS = $(wildcard *.c)
@@ -7,8 +19,6 @@ OBJ = $(SRCS:.c=.o)
 HEAD = libpnt.h
 
 CFLAGS = -Wall -Wextra -Werror
-
-FLAGS = -lm
 
 CC = gcc
 
